--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=pvback
 
 # PostgreSQL
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/pv_db?currentSchema=manager
+spring.datasource.url=jdbc:postgresql://localhost/postgres?currentSchema=manager
 spring.datasource.username=postgres
 spring.datasource.password=student123
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
